--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,11 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports:
-    igraph
+    igraph,
+    ggplot2,
+    scales,
+    usedist,
+    shiny,
+    bslib,
+    plotly,
+    magrittr
