--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: DRtool
 Title: Dimension Reduction Assessment Tool
 Version: 0.0.0.9000
 Authors@R: c(
-    person("Justin", "Lin", , "linjus@iu.edu", role = c("aut", "cre"),
-           comment = c(ORCID = "0009-0007-7190-2430"),
-    person("Julia", "Fukuyama", , "jfukuyam@iu.edu", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-7590-5563"))
+    person("Justin", "Lin", email = "linjus@iu.edu", role = c("aut", "cre"),
+           comment = c(ORCID = "0009-0007-7190-2430")),
+    person("Julia", "Fukuyama", email = "jfukuyam@iu.edu", role = "aut",
+           comment = c(ORCID = "0000-0002-7590-5563")))
 Description: A tool for assessing and visualizing dimension reduction performance.
 License: MIT + file LICENSE
 Encoding: UTF-8
@@ -19,4 +19,6 @@ Imports:
     shiny,
     bslib,
     plotly,
-    magrittr
+    magrittr,
+    CCA,
+    dplyr
