--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,6 @@ Imports:
     ggnetwork,
     stringr
 Remotes:
-    jokergoo/ComplexHeatmap
+    jokergoo/ComplexHeatmap,
+    Joker goo/InteractiveComplexHeatmap
 LazyData: true
