Allow custom distance matrix; add vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,9 +27,12 @@ Imports:
     ComplexHeatmap,
     InteractiveComplexHeatmap
 Suggests:
+    knitr,
     MASS,
+    rmarkdown,
     Rtsne
 Remotes:
     jokergoo/ComplexHeatmap,
     jokergoo/InteractiveComplexHeatmap
 LazyData: true
+VignetteBuilder: knitr
