--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
     gridExtra,
     scales,
     usedist,
+    MASS,
     shiny,
     bslib,
     plotly,
@@ -24,7 +25,6 @@ Imports:
     CCA,
     dplyr,
     ggnetwork,
-    gghighlight,
     stringr,
     ComplexHeatmap,
     InteractiveComplexHeatmap,
