Add dimension truncation to MST null distribution calculation; add documentation for MST test functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,7 @@ Imports:
     ggnetwork,
     stringr,
     ComplexHeatmap,
-    InteractiveComplexHeatmap,
-    MASS
+    InteractiveComplexHeatmap
 Suggests:
     knitr,
     MASS,
